add conf param receipt.productName; upgrade quarkus